--- a/src/components/EventsContainer/Events/Events.module.css
+++ b/src/components/EventsContainer/Events/Events.module.css
@@ -4,3 +4,12 @@
     justify-content: space-around;
 
 }
+
+.form{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+    margin-top: 25px;
+    margin-bottom: 25px;
+}
